--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-jest": "^23.8.2",
     "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^3.0.0",
+    "eslint-plugin-react-native": "^3.8.1",
     "jest": "^25.3.0",
     "metro-react-native-babel-preset": "^0.59.0",
     "prettier": "^2.0.4",
@@ -57,9 +59,9 @@
     "extends": [
       "@react-native-community",
       "eslint:recommended",
-      "plugin:@typescript-eslint/recommended",
       "prettier/@typescript-eslint",
       "prettier/react",
+      "plugin:@typescript-eslint/recommended",
       "plugin:react/recommended",
       "plugin:react-native/all",
       "plugin:import/errors",
