--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@typescript-eslint/eslint-plugin": "^2.28.0",
     "@typescript-eslint/parser": "^2.28.0",
     "babel-jest": "^25.3.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.1",
     "eslint-plugin-import": "^2.20.2",
@@ -33,13 +35,25 @@
     "eslint-plugin-react-hooks": "^3.0.0",
     "eslint-plugin-react-native": "^3.8.1",
     "jest": "^25.3.0",
+    "jest-enzyme": "^7.1.2",
     "metro-react-native-babel-preset": "^0.59.0",
     "prettier": "^2.0.4",
-    "react-test-renderer": "16.11.0",
+    "react-dom": "^16.13.1",
+    "react-native-testing-library": "^1.13.0",
+    "react-test-renderer": "^16.13.1",
     "typescript": "^3.8.3"
   },
   "jest": {
     "preset": "react-native",
+    "cacheDirectory": ".jest/cache",
+    "testPathIgnorePatterns": [
+      "/node_modules/*"
+    ],
+    "setupFiles": "/testsetup.js",
+    "setupFilesAfterEnv": [
+      "jest-enzyme"
+    ],
+    "testEnvironment": "enzyme",
     "moduleFileExtensions": [
       "ts",
       "tsx",
