--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "babel-jest": "^25.3.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
+    "enzyme-to-json": "^3.4.4",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.1",
     "eslint-plugin-import": "^2.20.2",
@@ -48,19 +49,42 @@
     "react-dom": "^16.13.1",
     "react-native-testing-library": "^1.13.0",
     "react-test-renderer": "^16.13.1",
+    "ts-jest": "^25.4.0",
     "typescript": "^3.8.3"
   },
   "jest": {
     "preset": "react-native",
     "cacheDirectory": ".jest/cache",
     "testPathIgnorePatterns": [
+      "\\.snap$",
+      "mocks/",
       "/node_modules/*"
     ],
-    "setupFiles": "/testsetup.js",
     "setupFilesAfterEnv": [
-      "jest-enzyme"
+      "./.testsetup.js",
+      "./node_modules/jest-enzyme/lib/index.js"
     ],
+    "transform": {
+      "^.+\\.js$": "<rootDir>/node_modules/react-native/jest/preprocessor.js",
+      "^.+\\.tsx?$": "ts-jest"
+    },
+    "globals": {
+      "ts-jest": {
+        "diagnostics": {
+          "warnOnly": true
+        },
+        "tsConfig": {
+          "resolveJsonModule": true,
+          "target": "es5",
+          "module": "commonjs",
+          "jsx": "react"
+        }
+      }
+    },
     "testEnvironment": "enzyme",
+    "snapshotSerializers": [
+      "enzyme-to-json/serializer"
+    ],
     "moduleFileExtensions": [
       "ts",
       "tsx",
